# bluejay

./: CMakeLists.txt  README.md  configure
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/bluejay/: CMakeLists.txt
src/lib/bluejay/chem/: CMakeLists.txt  atom.cc  atom.h  basis.cc  basis.h  molecule.cc  molecule.h  python.cc
src/lib/bluejay/chem/basis/: 6-31+G*.json  6-31+G.json  STO-3G.json
src/lib/bluejay/chem/integral/: engine.h  index.h  transform.cc  transform.h
src/lib/bluejay/chem/integral/transform/: expression.cc  transform.cc
src/lib/bluejay/chem/python/: basis.cc  integral.cc  molecule.cc
src/lib/bluejay/chem/test/: 3-21G.nw  basis.py  transform.py
src/lib/bluejay/core/: CMakeLists.txt  array.cc  array.h  bluejay.cc  debug.h  eigen.h  exception.h  forward.h  json.cc  json.h  pybind11.h  python.cc  range.h  string.h  system.cc  system.h  tuple.h
src/lib/bluejay/core/eigen/: einsum.cc  einsum.h
src/lib/bluejay/core/python/: array.cc  eigen.cc  json.cc  json.h
src/lib/bluejay/core/test/: eigen.py
src/lib/bluejay/ga/: CMakeLists.txt  forward.h  ga.cc  ga.h  python.cc  test.py
src/lib/bluejay/hf/: CMakeLists.txt  fock.cc  fock.h  hf.cc  hf.h  python.cc  test.py
src/lib/bluejay/hf/python/: __init__.py
src/lib/bluejay/libint2/: CMakeLists.txt  libint2.cc  libint2.h  python.cc  test.py
src/lib/python/bluejay/: __init__.py  core.py  ga.py
src/lib/python/bluejay/chem/: __init__.py  test.py
src/lib/python/bluejay/chem/basis/: __init__.py  nwchem.py
src/lib/python/bluejay/chem/integral/: __init__.py  expression.py  test.py  transform.py
src/lib/python/bluejay/chem/test/: 3821.json  5462328.json
